@@ -8,9 +8,9 @@ Waitress
 .. image:: https://github.com/Pylons/waitress/workflows/Build%20and%20test/badge.svg
     :target: https://github.com/Pylons/waitress/actions?query=workflow%3A%22Build+and+test%22
 
-.. image:: https://readthedocs.org/projects/waitress/badge/?version=master
-        :target: https://docs.pylonsproject.org/projects/waitress/en/master
-        :alt: master Documentation Status
+.. image:: https://readthedocs.org/projects/waitress/badge/?version=main
+        :target: https://docs.pylonsproject.org/projects/waitress/en/main
+        :alt: main Documentation Status
 
 .. image:: https://img.shields.io/badge/irc-freenode-blue.svg
         :target: https://webchat.freenode.net/?channels=pyramid
