@@ -49,7 +49,7 @@ Prepare new release
   $ twine upload dist/waitress-X.X-*
 
 
-Prepare master for further development (major releases only)
+Prepare main for further development (major releases only)
 ------------------------------------------------------------
 
 - In CHANGES.txt, preserve headings but clear out content. Add heading
