@@ -1,6 +1,8 @@
 3.0.0 (Unreleased)
 ------------------
 
+- Rename "master" git branch to "main"
+
 Updated Defaults
 ~~~~~~~~~~~~~~~~
 
